# AI-agent-developer-tech-test

./: .gitignore  Makefile  README.md  checkpoints.sqlite  langgraph.json  pyproject.toml  requirements.txt
data/: local_tax_policies.csv
data/chroma_db_2/: chroma.sqlite3
src/application/graphs/: chat_graph.py
src/application/nodes/: chat_nodes.py  rag_nodes.py
src/application/prompts/: chat_prompts.py
src/application/services/: vector_ingest_service.py  vector_search_service.py
src/application/tools/: chat_qa_tool.py
src/application/use_cases/: call_graph.py
src/core/: logging.py
src/data/chroma_db_2/: chroma.sqlite3
src/domain/models/: chat_state.py
src/domain/repositories/: vector_db_repository.py
src/infrastructure/llm/: openai_wrapper.py
src/infrastructure/tools/: chat_qa_tool.py
src/infrastructure/vectorstore/: chroma_repository.py
src/setup/: ingest_vectorstore.py
tests/: memory_example.py
tests/integration/: test_graphs.py
tests/unit/: test_graphs.py  test_vector_search.py
tools/linters/: ruff.toml
